refactor : collect(Collectors.toList()) replace .toList()